src/assets/scss/structure/_vertical.scss
/* ... */
.vertical-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba($dark, 0.35);
    z-index: 1003;
    display: none;
}

// When sidebar is open as overlay (tablet/mobile), push the clickable area
// to start after the sidebar so touches on the sidebar don't close it
.vertical-sidebar-enable .vertical-overlay {
    left: var(--#{$prefix}vertical-menu-width);
    width: calc(100vw - var(--#{$prefix}vertical-menu-width));
}

// Mobile Menu
.vertical-sidebar-enable {
    .vertical-overlay {
        display: block;
    }

    .app-menu {
        margin-left: 0 !important;
        z-index: 1004;
    }
}

// rtl
[dir="rtl"] {
    .navbar-menu {
        .navbar-nav {
            .nav-link[data-bs-toggle=collapse] {
                &:after {
                    transform: rotate(180deg);
                }

                &[aria-expanded=true]:after {
                    transform: rotate(270deg);
                }
            }
        }
    }
}

@if $sidebar-gradient-mode { 
    
    .bg-vertical-gradient {
        background: $vertical-menu-bg-gradient;
        ;
    }

    .bg-vertical-gradient-2 {
        background: $vertical-menu-bg-gradient-2;
    }

    .bg-vertical-gradient-3 {
        background: $vertical-menu-bg-gradient-3;
    }

    .bg-vertical-gradient-4 {
        background: $vertical-menu-bg-gradient-4;
    }
}


@if $sidebar-img {

    //sidebar-images
    .sidebar-background {
        position: absolute;
        z-index: -1;
        height: 100%;
        width: 100%;
        display: block;
        top: 0;
        left: 0;
        background-size: cover;
        background-position: 50%;
        opacity: .07;
    }


}

[data-layout="semibox"] {

    .page-title-box {
        padding: 10px 0;
        background-color: transparent;
        box-shadow: none;
        margin: -15px 0 1.5rem 0;
    }

    @media (min-width: 768px) {

        &[data-sidebar-size="sm"],
        &[data-sidebar-size="sm-hover"] {
            .main-content {
                margin-left: var(--#{$prefix}vertical-menu-width-sm);
            }

            #page-topbar {
                left: var(--#{$prefix}vertical-menu-width-sm);
            }

            .footer {
                left: var(--#{$prefix}vertical-menu-width-sm);
            }
        }

        &[data-sidebar-size="md"] {
            #page-topbar {
                left: var(--#{$prefix}vertical-menu-width-md);
            }

            .footer {
                left: var(--#{$prefix}vertical-menu-width-md);
            }
        }
    }

    @media (min-width: 1440px) {

        .page-content {
            padding: calc(#{$header-height} + #{$grid-gutter-width} * 2) calc(#{$grid-gutter-width} * 0.5) $footer-height calc(#{$grid-gutter-width} * 0.5);
        }

        .navbar-menu {
            margin: 25px;
            border-radius: var(--#{$prefix}border-radius);
        }

        .main-content {
            margin-left: calc(var(--#{$prefix}vertical-menu-width) + 25px);
            padding: 0 var(--#{$prefix}semibox-width);
        }

        .footer {
            left: calc(var(--#{$prefix}vertical-menu-width) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            right: calc(var(--#{$prefix}semibox-width) + #{$grid-gutter-width});
        }

        #page-topbar {
            left: calc(var(--#{$prefix}vertical-menu-width) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            right: calc(var(--#{$prefix}semibox-width) + #{$grid-gutter-width});
            top: 25px;
            border-radius: $border-radius;
            transition: all 0.5s ease;
            border: 1px solid var(--#{$prefix}header-border);

            &.topbar-shadow {
                top: 0px;
            }
        }

        &[data-sidebar-size="md"] {

            .main-content {
                margin-left: calc(var(--#{$prefix}vertical-menu-width-md) + 25px);
            }

            #page-topbar {
                left: calc(var(--#{$prefix}vertical-menu-width-md) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }

            .footer {
                left: calc(var(--#{$prefix}vertical-menu-width-md) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }
        }

        &[data-sidebar-size="sm"] {
            .main-content {
                margin-left: calc(var(--#{$prefix}vertical-menu-width-sm) + 25px);
            }

            .navbar-brand-box {
                top: 25px;
            }

            #page-topbar {
                left: calc(var(--#{$prefix}vertical-menu-width-sm) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }

            .footer {
                left: calc(var(--#{$prefix}vertical-menu-width-sm) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }
        }

        &[data-sidebar-size="sm-hover"] {
            .main-content {
                margin-left: calc(var(--#{$prefix}vertical-menu-width-sm) + 25px);
            }

            #page-topbar {
                left: calc(var(--#{$prefix}vertical-menu-width-sm) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }

            .footer {
                left: calc(var(--#{$prefix}vertical-menu-width-sm) + var(--#{$prefix}semibox-width) + #{$grid-gutter-width} + 25px);
            }
        }
    }

    .mx-n4 {
        margin-left: 0px !important;
        margin-right: 0px !important;

        &.p-1 {
            padding-left: 0px !important;
            padding-right: 0px !important;
        }
    }
}

